--- a/index.html
+++ b/index.html
@@ -424,21 +424,19 @@
         </section>
 
         <!-- Footer -->
-        <footer class="bg-slate-900 py-12 border-t border-slate-700">
-            <div class="container mx-auto px-4 text-center">
-                <div class="mb-6">
-                    <div class="text-2xl font-bold gradient-text mb-2">ASG Platform</div>
-                    <p class="text-gray-400">A US-based tech company building world-class software</p>
-                </div>
-                <div class="text-sm text-gray-500 space-y-1">
-                    <p>📍 Open to Filipino citizens residing in the Philippines</p>
-                    <p>🕙 Recruitment Hours: 10 PM – 3 AM PH Time</p>
-                    <p class="mt-4">© 2024 ASG Platform. All rights reserved.</p>
-                </div>
-            </div>
-        </footer>
-    </div>
-
+       <div class="text-sm text-gray-400 max-w-lg mx-auto flex flex-wrap justify-center items-center gap-x-4 gap-y-2 text-center">
+  <span class="flex items-center gap-x-1 whitespace-nowrap">
+    <span>⚡</span> Limited slots available
+  </span>
+  <span class="hidden sm:inline">•</span>
+  <span class="flex items-center gap-x-1 whitespace-nowrap">
+    <span>📍</span> Filipino residents only
+  </span>
+  <span class="hidden sm:inline">•</span>
+  <span class="flex items-center gap-x-1 whitespace-nowrap">
+    <span>🕙</span> Recruitment: 10 PM – 3 AM PH Time
+  </span>
+</div>
     <!-- Enhanced Chatbot -->
     <div id="chatbot-container" class="fixed bottom-6 right-6 z-50">
         <button id="chat-bubble" class="bg-gradient-to-r from-emerald-500 to-blue-600 text-white w-16 h-16 rounded-full flex items-center justify-center shadow-2xl transform hover:scale-110 transition-all floating">
