--- a/index.html
+++ b/index.html
@@ -416,9 +416,19 @@
                         🚀 Join the Residency NOW
                     </a>
 
-                    <div class="text-sm text-gray-400 max-w-lg mx-auto">
-                        <p>⚡ Limited slots available • 📍 Filipino residents only • 🕙 Recruitment: 10 PM – 3 AM PH Time</p>
-                    </div>
+                 <div class="text-sm text-gray-400 max-w-lg mx-auto flex flex-wrap justify-center items-center gap-x-4 gap-y-2 text-center">
+  <span class="flex items-center gap-x-1 whitespace-nowrap">
+    <span>⚡</span> Limited slots available
+  </span>
+  <span class="hidden sm:inline">•</span>
+  <span class="flex items-center gap-x-1 whitespace-nowrap">
+    <span>📍</span> Filipino residents only
+  </span>
+  <span class="hidden sm:inline">•</span>
+  <span class="flex items-center gap-x-1 whitespace-nowrap">
+    <span>🕙</span> Recruitment: 10 PM – 3 AM PH Time
+  </span>
+</div>
                 </div>
             </div>
         </section>
